MGMT-3100 Allow users to download PXE artifacts
