# swagger.yaml
@@ -2403,6 +2403,44 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
+  /pxe-artifacts:
+    get:
+      tags:
+        - installer
+      security: []
+      summary: Downloads PXE artifact.
+      operationId: DownloadPXEArtifact
+      produces:
+        - application/octet-stream
+      parameters:
+        - in: query
+          name: file_type
+          type: string
+          enum: [initrd.img, rootfs.img, vmlinuz]
+          required: true
+      responses:
+        200:
+          description: Success.
+          schema:
+            type: file
+        307:
+          description: Redirect.
+          headers:
+            Location:
+              type: string
+        401:
+          description: Unauthorized.
+          schema:
+            $ref: '#/definitions/infra_error'
+        403:
+          description: Forbidden.
+          schema:
+            $ref: '#/definitions/infra_error'
+        500:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+
   /assisted-service-iso:
     post:
       tags:
